--- a/kins-page/style.css
+++ b/kins-page/style.css
@@ -97,6 +97,15 @@ a:hover {
     text-decoration: underline;
 }
 
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 @media(max-width:800px){
     .content {
         width: 80%;
