--- a/kins-page/style.css
+++ b/kins-page/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
 :root {
-    --header-height:300px;
-    --title-height:100px;
+  --header-height: 300px;
+  --title-height: 100px;
 }
 
 * {
@@ -19,106 +19,114 @@ body {
 }
 
 .site-title {
-    font-family: 'Piedra', cursive;
-    margin: 0;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    z-index: 2;
+  font-family: 'Piedra', cursive;
+  margin: 0;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 2;
 }
 .header {
-    width: 100%;
-    height: var(--header-height);
-    background-image: url('https://images.unsplash.com/photo-1569205534881-a028dc99a029?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80');
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-    line-height: var(--header-height);
-    font-size: 100px;
-    color:#fff;
+  width: 100%;
+  height: var(--header-height);
+  background-image: url('https://images.unsplash.com/photo-1569205534881-a028dc99a029?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+  line-height: var(--header-height);
+  font-size: 100px;
+  color: #fff;
 }
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 200px;
-    background-color: rgba(0,0,0,0.3);
-    color: white;
-    overflow: scroll;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.6);
-    transform: translateX(-195px);
-    transition: transform 0.5s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  overflow: scroll;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
+  transform: translateX(-195px);
+  transition: transform 0.5s ease;
 }
 .sidebar:hover {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 .sidebar .title {
-    width: 100%;
-    height: var(--title-height);
-    text-align: center;
-    line-height: var(--title-height);
-    cursor: pointer;
-    transition: all 0.5s ease;
+  width: 100%;
+  height: var(--title-height);
+  text-align: center;
+  line-height: var(--title-height);
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
 .sidebar .title.current {
-    background-color: rgba(255,255,255,0.6);
-    color:#000;
-    box-shadow: 0 2px 10px rgba(255,255,255,0.6);
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #000;
+  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.6);
 }
-.sidebar .title:not(:last-of-type){
-    border-bottom: 1px solid #fff;
+.sidebar .title:not(:last-of-type) {
+  border-bottom: 1px solid #fff;
 }
 .content {
-    width: 1000px;
+  width: 1000px;
 }
-
-
 
 pre {
-    background-color: darkslategray !important;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
-    padding: 5px;
-    color: #fff;
+  background-color: darkslategray !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
+  padding: 5px;
+  color: #fff;
 }
-img{
-    display: block;
-    max-width: 800px;
-    margin: 0 auto;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
+img {
+  display: block;
+  max-width: 800px;
+  margin: 0 auto;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .unselectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-@media(max-width:800px){
-    .content {
-        width: 80%;
-    }
-    img{
-        max-width: 80%;
-    }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
 }
-@media(max-width:500px){
-    .content {
-        width: 100%;
-    }
-    img{
-        max-width: 80%;
-    }
+
+/* Hide scrollbar for IE and Edge */
+.hide-scrollbar {
+  -ms-overflow-style: none;
+}
+
+@media (max-width: 800px) {
+  .content {
+    width: 80%;
+  }
+  img {
+    max-width: 80%;
+  }
+}
+@media (max-width: 500px) {
+  .content {
+    width: 100%;
+  }
+  img {
+    max-width: 80%;
+  }
 }
