--- a/kins-page/style.css
+++ b/kins-page/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
 :root {
   --header-height: 300px;
@@ -10,14 +10,23 @@
 }
 body {
   background-color: #f9fafb;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-
+h1:not(.site-title),h2,h3,h4,h5 {
+  /* border-bottom: 1px solid #000;
+  border-left: 1px solid #000; */
+  width: fit-content;
+  box-shadow: 0px 6px 3px -3px rgba(0, 0, 0, 0.3);
+  padding: 5px 10px;
+}
+li {
+  list-style-image: url("./pen.png");
+}
 .site-title {
   font-family: 'Piedra', cursive;
   margin: 0;
@@ -27,6 +36,7 @@ body {
   font-size: 20px;
   cursor: pointer;
   z-index: 2;
+  box-sizing: 0;
 }
 .header {
   width: 100%;
@@ -40,7 +50,7 @@ body {
   font-size: 100px;
   color: #fff;
 }
-.sidebar {
+.sidebar-container {
   position: fixed;
   top: 0;
   left: 0;
@@ -48,13 +58,38 @@ body {
   width: 200px;
   background-color: rgba(0, 0, 0, 0.3);
   color: white;
-  overflow: scroll;
+  overflow: visible;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
-  transform: translateX(-195px);
+  transform: translateX(-200px);
   transition: transform 0.5s ease;
 }
-.sidebar:hover {
+.sidebar {
+  width: 100%;
+  height: 100vh;
+  overflow: scroll;
+}
+.sidebar-container:hover {
   transform: translateX(0);
+}
+.sidebar-container:left {
+  transform: translateX(-200px);
+}
+.sidebar-container .arrow {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.6);
+  position: absolute;
+  width: 30px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  top: 50%;
+  right: -30px;
+  transform: translateY(-50%);
+  border: 0;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+
 }
 .sidebar .title {
   width: 100%;
@@ -81,6 +116,8 @@ pre {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
   padding: 5px;
   color: #fff;
+  white-space: pre-wrap;
+  padding: 5px 10px;
 }
 img {
   display: block;
@@ -114,19 +151,14 @@ a:hover {
   -ms-overflow-style: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .content {
     width: 80%;
   }
   img {
     max-width: 80%;
   }
-}
-@media (max-width: 500px) {
-  .content {
-    width: 100%;
-  }
-  img {
-    max-width: 80%;
+  .header {
+    font-size: 50px;
   }
 }
