--- a/kins-page/style.css
+++ b/kins-page/style.css
@@ -1,27 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
-:root {
-  --header-height: 300px;
-  --title-height: 100px;
-}
+
 
 * {
   box-sizing: border-box;
 }
 body {
-  background-color: #f9fafb;
+  background-color: var(--bg-color);
   font-family: 'Noto Sans JP', sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: var(--text-color);
 }
 h1:not(.site-title),h2,h3,h4,h5 {
   /* border-bottom: 1px solid #000;
   border-left: 1px solid #000; */
   width: fit-content;
-  box-shadow: 0px 6px 3px -3px rgba(0, 0, 0, 0.3);
+  box-shadow: var(--h-box-shadow);
   padding: 5px 10px;
 }
 li {
@@ -40,11 +38,12 @@ a {
   cursor: pointer;
   z-index: 2;
   box-sizing: 0;
+  color: var(--title-color);
 }
 .header {
   width: 100%;
   height: var(--header-height);
-  background-image: url('https://images.unsplash.com/photo-1569205534881-a028dc99a029?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80');
+  background-image: var(--bg-img);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
