--- a/kins-page/main.css
+++ b/kins-page/main.css
@@ -81,6 +81,9 @@ a {
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   background-position: center center;
   background-size: cover;
@@ -97,7 +100,7 @@ a {
   left: 0;
   height: 100vh;
   width: 200px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.6);
   color: white;
   overflow: visible;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
@@ -114,6 +117,9 @@ a {
 .sidebar-container:hover {
   transform: translateX(0);
 }
+.sidebar-container:hover .arrow i {
+  transform: rotate(180deg);
+}
 
 .sidebar-container:left {
   transform: translateX(-200px);
@@ -121,8 +127,8 @@ a {
 
 .sidebar-container .arrow {
   display: block;
-  background-color: rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
   position: absolute;
   width: 30px;
   height: 100px;
@@ -132,8 +138,12 @@ a {
   right: -30px;
   transform: translateY(-50%);
   border: 0;
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.sidebar-container .arrow i {
+  transform: rotate(0);
+  transition: transform 0.5s ease;
 }
 
 .sidebar .title {
@@ -157,6 +167,7 @@ a {
 
 .content {
   width: 1000px;
+  padding-top: 300px;
 }
 
 pre {
