--- a/kins-page/sass/_config.scss
+++ b/kins-page/sass/_config.scss
@@ -9,6 +9,8 @@ $dark-bg-img: url("https://images.unsplash.com/photo-1444080748397-f442aa95c3e5?
 $dark-bg-color: #120a31;
 $dark-text-color: #fff;
 $dark-h-box-shadow: 0px 6px 3px -3px rgba(255, 255, 255, 0.3);
+// other variables
+$sidebar-transition: 0.5s;
 
 @mixin theme($name, $bg, $text, $url, $shadow) {
   .#{$name} {
