--- a/Vanilla/style.scss
+++ b/Vanilla/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 :root {
   --success-color: #2ecc71;
   --error-color: #e74c3c;
@@ -7,10 +7,9 @@
 * {
   box-sizing: border-box;
 }
-
 body {
   background-color: #f9fafb;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   display: flex;
   flex-direction: column;
   /* center the item */
@@ -19,11 +18,10 @@ body {
   min-height: 100vh;
   margin: 0;
 }
-
 .header {
   width: 100%;
   height: 200px;
-  background-image: url("./imgs/bg.jpeg");
+  background-image: url('./imgs/bg.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,14 +32,12 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .container {
   width: 1000px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
 }
-
 .box {
   text-align: center;
   transition: transform 0.5s ease;
@@ -49,55 +45,52 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   cursor: pointer;
+  &:hover {
+    transform: scale(1.2);
+    .view-repo-btn {
+      display: block;
+      opacity: 1;
+    }
+  }
+  img {
+    width: 100%;
+  }
+  .view-repo-btn {
+    display: none;
+    opacity: 0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: opacity 1s, background-color 1s;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    border: white 1px;
+    border-radius: 5px;
+    padding: 10px 8px;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+  }
 }
-.box:hover {
-  transform: scale(1.2);
-}
-.box:hover .view-repo-btn {
-  display: block;
-  opacity: 1;
-}
-.box img {
-  width: 100%;
-}
-.box .view-repo-btn {
-  display: none;
-  opacity: 0;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: opacity 1s, background-color 1s;
-  background-color: rgba(0, 0, 0, 0.3);
-  color: white;
-  border: white 1px;
-  border-radius: 5px;
-  padding: 10px 8px;
-}
-.box .view-repo-btn:hover {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-@media (max-width: 1000px) {
+@media(max-width:1000px){
   .container {
     width: 80%;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
   }
 }
-@media (max-width: 700px) {
+@media(max-width:700px){
   .container {
     width: 80%;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
 }
-@media (max-width: 500px) {
+@media(max-width:500px){
   .container {
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0px;
   }
 }
-
-/*# sourceMappingURL=style.css.map */
