--- a/Vanilla/Extending-Cards/style.css
+++ b/Vanilla/Extending-Cards/style.css
@@ -27,7 +27,7 @@ body {
   flex: 0.5;
   margin: 10px;
   position: relative;
-  transition: flex 2s ease;
+  transition: flex 1s ease;
 }
 .panel h3 {
   font-size: 24px;
@@ -36,7 +36,7 @@ body {
   left: 20px;
   margin: 0;
   opacity: 0;
-  transition: opacity 2s ease;
+  transition: opacity 0.5s ease;
 }
 
 .panel.active {
@@ -45,6 +45,7 @@ body {
 
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 0.5s ease 1s;
 }
 
 @media (max-width: 480px) {
