--- a/Vanilla/Form-Wave-Animation/style.css
+++ b/Vanilla/Form-Wave-Animation/style.css
@@ -49,6 +49,7 @@ body {
 .form-control input:focus,
 .form-control input:valid {
   outline: none;
+  border-bottom-color: lightblue;
 }
 
 .btn {
@@ -75,4 +76,23 @@ body {
 
 p {
   margin-top: 30px;
+}
+
+.form-control label {
+  position: absolute;
+  top: 15px;
+  left: 0;
+}
+
+.form-control label span {
+  /* cannot apply transform when no inline-block */
+  display: inline-block;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+/* https://www.w3schools.com/cssref/css_selectors.php */
+.form-control input:focus ~ label span,
+.form-control input:valid ~ label span {
+  transform: translateY(-30px);
+  color: lightblue;
 }
