--- a/Vanilla/FAQ-Collapse/style.css
+++ b/Vanilla/FAQ-Collapse/style.css
@@ -30,6 +30,7 @@ body {
   border-radius: 5px;
   padding: 12px 16px;
   margin-bottom: 12px;
+  transition: 0.4s ease;
 }
 
 .box.active {
@@ -44,12 +45,18 @@ body {
 
 .a {
   font-weight: bold;
-  padding: 12px 0;
-  display: none;
+  padding: 0;
+  /* display: none; */
+  height: 0;
+  opacity: 0;
+  transition: 0.4s ease;
 }
 
 .active .a {
-  display: block;
+  /* display: block; */
+  height: 50px;
+  padding: 12px 0;
+  opacity: 1;
 }
 
 .btn {
