--- a/Vanilla/FAQ-Collapse/style.css
+++ b/Vanilla/FAQ-Collapse/style.css
@@ -24,6 +24,7 @@ body {
 }
 
 .box {
+  background-color: transparent;
   position: relative;
   width: 100%;
   border: 2px solid #888;
@@ -31,10 +32,31 @@ body {
   padding: 12px 16px;
   margin-bottom: 12px;
   transition: 0.4s ease;
+  overflow: hidden;
 }
 
 .box.active {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3), 0 2px 10px rgba(0, 0, 0, 0.3);
+  background-color: white;
+}
+
+.box.active::before,
+.box.active::after {
+  content: "\f075";
+  font-family: "Font Awesome 6 Free";
+  color: #2ecc71;
+  font-size: 7rem;
+  position: absolute;
+  opacity: 0.2;
+  top: 20px;
+  left: 20px;
+  z-index: 0;
+}
+.box.active::after {
+  color: #3498db;
+  top: -10px;
+  left: -30px;
+  transform: rotateY(180deg);
 }
 
 .q {
@@ -47,14 +69,14 @@ body {
   font-weight: bold;
   padding: 0;
   /* display: none; */
-  height: 0;
+  max-height: 0;
   opacity: 0;
   transition: 0.4s ease;
 }
 
 .active .a {
   /* display: block; */
-  height: 50px;
+  max-height: 100vh;
   padding: 12px 0;
   opacity: 1;
 }
