--- a/Vanilla/Random-Choice-Picker/style.css
+++ b/Vanilla/Random-Choice-Picker/style.css
@@ -36,4 +36,16 @@ textarea {
   background-color: purple;
   border-radius: 1rem;
   margin: 12px 8px;
+  display: inline-block;
+  border: 2px solid transparent;
+  transition: border 0.5s ease;
+}
+
+.choice.highlighted {
+  background-color: black;
+}
+
+.choice.highlighted.checked {
+  border: 2px solid white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
